--- a/plugin.xml
+++ b/plugin.xml
@@ -8,14 +8,14 @@
 	</author>
 	<homepage>http://livestreetcms.com</homepage>
 	<settings></settings>
-	<version>1.3.1</version>
+	<version>2.0.0</version>
 	<requires>
-		<livestreet>1.0</livestreet>
+		<livestreet>2.0.*</livestreet>
 		<plugins>
 		</plugins>
 	</requires>
 	<description>
 		<lang name="default">Payment</lang>
-		<lang name="russian">Позволяет принимать платежи on-line</lang>
+		<lang name="ru">Позволяет принимать платежи on-line</lang>
 	</description>
 </plugin>
